--- a/WolvenKit.RED4.Types/WolvenKit.RED4.Types.csproj
+++ b/WolvenKit.RED4.Types/WolvenKit.RED4.Types.csproj
@@ -9,6 +9,7 @@
     <RepositoryType>git</RepositoryType>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
+    <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
 
   <ItemGroup>
