--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -68,30 +68,31 @@
     <PackageReference Include="NodeNetwork" Version="6.0.0" />
     <PackageReference Include="NodeNetworkToolkit" Version="6.0.0" />
     <PackageReference Include="Octokit" Version="0.50.0" />
+    <PackageReference Include="Syncfusion.Edit.WPF" Version="19.4.0.38" />
 
-    <PackageReference Include="Syncfusion.Tools.WPF" Version="19.3.0.57" />
-    <PackageReference Include="Syncfusion.PropertyGrid.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfInput.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfImageEditor.WPF" Version="19.3.0.45" />
+    <PackageReference Include="Syncfusion.Tools.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.PropertyGrid.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfInput.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfImageEditor.WPF" Version="19.4.0.38" />
 
-    <PackageReference Include="Syncfusion.SfProgressBar.WPF" Version="19.3.0.45" />
+    <PackageReference Include="Syncfusion.SfProgressBar.WPF" Version="19.4.0.38" />
 
-    <PackageReference Include="Syncfusion.SfAccordion.WPF" Version="19.3.0.45" />
+    <PackageReference Include="Syncfusion.SfAccordion.WPF" Version="19.4.0.38" />
 
-    <PackageReference Include="Syncfusion.SfBarcode.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfHubTile.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfKanban.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfRadialMenu.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfTextInputLayout.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfTreeNavigator.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="19.3.0.45" />
+    <PackageReference Include="Syncfusion.SfBarcode.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfHubTile.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfKanban.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfRadialMenu.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfTextInputLayout.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfTreeNavigator.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="19.4.0.38" />
 
-    <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="19.3.0.45" />
-    <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="19.3.0.45" />
+    <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="19.4.0.38" />
+    <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="19.4.0.38" />
 
 
 
