--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -50,7 +50,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-    - uses: microsoft/setup-msbuild@v1.0.2
+    - uses: microsoft/setup-msbuild@v1.1
+      with:
+        vs-version: '[17.0'
+        msbuild-architecture: x64
 
      # environmental variables
     - run: echo "PROJ=./WolvenKit/WolvenKit.csproj" >> $env:GITHUB_ENV
