try msbuild CI again

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         dotnet-version: 6.0.x
     - uses: microsoft/setup-msbuild@v1.1
       with:
-        vs-version: '[17.0'
+        vs-version: '17.0'
         msbuild-architecture: x64
 
      # environmental variables
@@ -87,7 +87,7 @@ jobs:
         dotnet-version: 6.0.x
     - uses: microsoft/setup-msbuild@v1.1
       with:
-        vs-version: '[17.0'
+        vs-version: '17.0'
         msbuild-architecture: x64
 
     - name: Get version
