--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: 6.0.x
     - uses: microsoft/setup-msbuild@v1.1
       with:
-        vs-version: '[17.0'
+        vs-version: '17.0'
         msbuild-architecture: x64
 
      # environmental variables
