Updated CI host to windows-2022 (try msbuild CI again again)

--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   check_date:
-    runs-on: windows-latest
+    runs-on: windows-2022
     name: Check latest commit
     outputs:
       should_run: ${{ steps.should_run.outputs.should_run }}
@@ -30,7 +30,7 @@ jobs:
   nightly-wkit-win:
     needs: check_date
     if: ${{ needs.check_date.outputs.should_run != 'false' }}
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     steps:
     # setup  
