--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -75,6 +75,7 @@
     <PackageReference Include="AvalonEdit" Version="6.1.2.30" />
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="5.0.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
+    <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="19.4.0.38" />
     <PackageReference Include="WinCopies.WindowsAPICodePack" Version="2.9.3" />
     <PackageReference Include="WinCopies.WindowsAPICodePack.Shell" Version="2.10.2" />
     <PackageReference Include="Discord.Net" Version="2.4.0" />
