--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -73,7 +73,7 @@
 
   <ItemGroup>
     <PackageReference Include="AvalonEdit" Version="6.1.3.50" />
-    <PackageReference Include="gpm.Installer" Version="0.2.0" />
+    <PackageReference Include="gpm.Installer" Version="0.2.1" />
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.0.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="19.4.0.38" />
@@ -90,6 +90,10 @@
     <PackageReference Include="Pfim" Version="0.10.3" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
     <PackageReference Include="WolvenInstaller" Version="1.1.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
