--- a/WolvenKit.Core/WolvenKit.Core.csproj
+++ b/WolvenKit.Core/WolvenKit.Core.csproj
@@ -32,6 +32,9 @@
         <PackageReference Include="ReactiveUI" Version="17.1.17" />
         <PackageReference Include="semver" Version="2.0.6" />
         <PackageReference Include="System.Reflection.MetadataLoadContext" Version="6.0.0" />
+        <PackageReference Include="Serilog" Version="2.10.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     </ItemGroup>
 
 </Project>
