--- a/WolvenKit.MSTests/WolvenKit.MSTests.csproj
+++ b/WolvenKit.MSTests/WolvenKit.MSTests.csproj
@@ -25,11 +25,23 @@
 
   <ItemGroup>
     <None Remove="appsettings.json" />
+    <None Remove="Resources\oodle.kark" />
+    <None Remove="Resources\oodle.txt" />
     <None Remove="Resources\resourceUses_131.zip" />
+    <None Remove="Resources\unusedhashes.kark" />
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\oodle.kark">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\oodle.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\resourceuses_131.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\unusedhashes.kark">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
