--- a/WolvenKit.MSTests/WolvenKit.MSTests.csproj
+++ b/WolvenKit.MSTests/WolvenKit.MSTests.csproj
@@ -42,10 +42,20 @@
     <None Remove="Resources\4_oodle.kark" />
     <None Remove="Resources\5_oodle.kark" />
     <None Remove="Resources\6_oodle.kark" />
+    <None Remove="Resources\h0_001_wa_c__judy_d02.bmp" />
+    <None Remove="Resources\h0_001_wa_c__judy_d02.dds" />
+    <None Remove="Resources\h0_001_wa_c__judy_d02.jpg" />
+    <None Remove="Resources\h0_001_wa_c__judy_d02.png" />
+    <None Remove="Resources\h0_001_wa_c__judy_d02.tga" />
+    <None Remove="Resources\h0_001_wa_c__judy_d02.tiff" />
     <None Remove="Resources\oodle.kark" />
     <None Remove="Resources\oodle.txt" />
+    <None Remove="Resources\q204_columbarium_1080p.bmp" />
     <None Remove="Resources\q204_columbarium_1080p.dds" />
+    <None Remove="Resources\q204_columbarium_1080p.jpg" />
+    <None Remove="Resources\q204_columbarium_1080p.png" />
     <None Remove="Resources\q204_columbarium_1080p.tga" />
+    <None Remove="Resources\q204_columbarium_1080p.tiff" />
     <None Remove="Resources\q204_columbarium_1080p_1.bmp" />
     <None Remove="Resources\q204_columbarium_1080p_1.jpg" />
     <None Remove="Resources\q204_columbarium_1080p_1.png" />
@@ -73,28 +83,43 @@
     <Content Include="Resources\6_oodle.kark">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\h0_001_wa_c__judy_d02.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\h0_001_wa_c__judy_d02.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\h0_001_wa_c__judy_d02.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\h0_001_wa_c__judy_d02.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\h0_001_wa_c__judy_d02.tga">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\h0_001_wa_c__judy_d02.tiff">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\oodle.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\q204_columbarium_1080p.bmp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\q204_columbarium_1080p.dds">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\q204_columbarium_1080p.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\q204_columbarium_1080p.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\q204_columbarium_1080p.tga">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\q204_columbarium_1080p_1.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\q204_columbarium_1080p_1.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\q204_columbarium_1080p_1.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\q204_columbarium_1080p_1.tga">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\q204_columbarium_1080p_1.tiff">
+    <Content Include="Resources\q204_columbarium_1080p.tiff">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\resourceuses_131.zip">
