--- a/WolvenKit.RED4.Archive/WolvenKit.RED4.Archive.csproj
+++ b/WolvenKit.RED4.Archive/WolvenKit.RED4.Archive.csproj
@@ -5,7 +5,7 @@
     <Configurations>Release;Debug</Configurations>
     <Platforms>x64</Platforms>
     <PackageVersion>0.1.0</PackageVersion>
-    <RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
+    <RepositoryUrl>https://github.com/WolvenKit/WolvenKit</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
