--- a/WolvenKit.RED4.TweakDB/WolvenKit.RED4.TweakDB.csproj
+++ b/WolvenKit.RED4.TweakDB/WolvenKit.RED4.TweakDB.csproj
@@ -6,7 +6,7 @@
     <Company>WolvenKit</Company>
     <Description>TweakDB file format (Cyberpunk 2077) for the WolvenKit Mod Editor.</Description>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
+    <RepositoryUrl>https://github.com/WolvenKit/WolvenKit</RepositoryUrl>
     <Version>0.1.0</Version>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
